-------------------------------------------------
GearSwap 0.850 - Japanese support.
-------------------------------------------------
GearSwap 0.840 - Overhaul for Wardrobe. Preparations for new augment library.
-------------------------------------------------
GearSwap 0.837 - Created infrastructure for GearSwap served information and added Indi spell aura information to player.
-------------------------------------------------
GearSwap 0.836 - Added augments to the export feature for currently equipped sets and inventory.
-------------------------------------------------
GearSwap 0.835 - Adaptation for new resources.
-------------------------------------------------
GearSwap 0.834 - Filter now handles Scholar spells and Blue Magic.
-------------------------------------------------
GearSwap 0.833 - Added the first version of a more authentic filter.
-------------------------------------------------
GearSwap 0.832 - Adapted GearSwap for the .lua version of resources lib.
-------------------------------------------------
GearSwap 0.830 - Fixed various bugs. Differentiated pretarget and precast delays. Augments work again.
-------------------------------------------------
GearSwap 0.823 - Changed GearSwap to run off the resources library. Fixed Double-Up's aftercast.
-------------------------------------------------
GearSwap 0.822 - Added demomode and filters to prevent impossible actions. 
-------------------------------------------------
GearSwap 0.821 - Finalized register_event(). Protected user files to prevent error propagation.
-------------------------------------------------
GearSwap 0.820 - Added 0x02, 0x35 extdata augment handling. Added sub_job_change(new,old) event.
-------------------------------------------------
GearSwap 0.819 - API adjustments. Massive refactoring of the scheduler, which improved midaction() and pet_midaction(). Fixed " <wait X>" macros and the buff_change() event.
-------------------------------------------------