@@ -1,4 +1,6 @@
 -------------------------------------------------
+GearSwap 0.851 - Added Load command and file path support for a libs folder.
+-------------------------------------------------
 GearSwap 0.850 - Japanese support.
 -------------------------------------------------
 GearSwap 0.840 - Overhaul for Wardrobe. Preparations for new augment library.
